RESOLVED FIXED210681
Fix client certificate authentication when using non-default WKWebsiteDataStores
https://bugs.webkit.org/show_bug.cgi?id=210681
Summary Fix client certificate authentication when using non-default WKWebsiteDataStores
Alex Christensen
Reported 2020-04-17 19:19:31 PDT
Fix client certificate authentication when using non-default WKWebsiteDataStores
Attachments
Patch (5.58 KB, patch)
2020-04-17 19:24 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2020-04-17 19:24:33 PDT
EWS
Comment 2 2020-04-18 14:39:20 PDT
Committed r260322: <https://trac.webkit.org/changeset/260322> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396824 [details].
Radar WebKit Bug Importer
Comment 3 2020-04-18 14:40:17 PDT
David Kilzer (:ddkilzer)
Comment 4 2020-04-21 06:29:59 PDT
Note You need to log in before you can comment on or make changes to this bug.